# WaylandWSIExample

./: .mailmap  CMakeLists.txt  Common.cpp  Common.hpp  Display.cpp  Display.hpp  Keyboard.cpp  Keyboard.hpp  LICENSE  MainWindow.cpp  MainWindow.hpp  MappableFd.cpp  MappableFd.hpp  MappedFd.cpp  MappedFd.hpp  MemFd.cpp  MemFd.hpp  Pointer.cpp  Pointer.hpp  README.md  Renderer.cpp  Renderer.hpp  RendererBase.cpp  RendererBase.hpp  Seat.cpp  Seat.hpp  SwapchainBase.cpp  WaylandPointer.hpp  Window.cpp  Window.hpp  main.cpp  vk_mem_alloc.cpp
.github/workflows/: cmake-single-platform.yml
shaders/: main.frag  main.vert  ui.frag  ui.vert  world.frag  world.vert
vulkan/: Common.hpp  Renderer.cpp  Renderer.hpp  RendererBase.cpp  RendererBase.hpp  Swapchain.cpp  Swapchain.hpp  SwapchainBase.hpp
wayland/: Display.cpp  Display.hpp  EventBase.hpp  Keyboard.cpp  MappableFd.hpp  MouseWheelAxis.hpp  Pointer.cpp  Pointer.hpp  Seat.cpp  Seat.hpp  Touch.cpp  Touch.hpp  TouchEvent.hpp  TouchPoint.cpp  TouchPoint.hpp  WaylandPointer.hpp  Window.cpp  Window.hpp  XkbPointer.hpp
wayland/cursor/: CursorBase.cpp  CursorBase.hpp  CursorManagerBase.cpp  CursorManagerBase.hpp  CursorType.hpp
wayland/cursor/shape/: ShapeCursor.cpp  ShapeCursor.hpp  ShapeCursorManager.cpp  ShapeCursorManager.hpp
wayland/cursor/theme/: ThemeCursor.cpp  ThemeCursor.hpp  ThemeCursorManager.cpp  ThemeCursorManager.hpp
wayland/events/: EventBase.hpp  KeyboardEvents.cpp  KeyboardEvents.hpp  PointerEvents.cpp  PointerEvents.hpp  TouchEvents.cpp  TouchEvents.hpp
